--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -9,4 +9,10 @@
     h2 {
       @apply text-4xl font-black uppercase sm:text-6xl ;
     }
+    h3 {
+      @apply text-2xl font-black sm:text-4xl ;
+    }
+    h4 {
+      @apply text-xl font-bold sm:text-2xl ;
+    }
   }
